styling finished, logic finshed, responsiveness finished

--- a/styles/_setup.scss
+++ b/styles/_setup.scss
@@ -7,4 +7,5 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 ul {
     padding: 0;
     margin: 0;
+    // list-style: none;
 }
