--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -8,46 +8,178 @@
     width: 100%;
     position: relative;
 }
-
+//  fffd77 color for buttons!!!!!!!!!!!!!!!!!!!!!!!!!! etc!!!!!!!!!!!!!!!!!! rgba(0, 0, 0, 0.1)
 .content-section {
     background: #139a43;
-    border: 3px solid #34cb96;
+    border: 3px solid whitesmoke;
     border-radius: 4px;
     width: 50%;
+    min-width: 670px;
     height: 50%;
     margin:25vh auto;
+    position: relative;
     box-shadow: 10px 16px 10px #108c3c;
+    @media screen and (max-width: 744px){
+        width: 100%;
+        height: 70%;
+        min-width: 300px;
+        margin:15vh auto;
+    }
     &__container1 {
-        width: 50%;
-        margin: 0 auto;
+        width: 60%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        @media screen and (max-width: 744px){
+            width: 80%;
+            min-width: 300px;
+        }
+        &__title {
+            margin-top: 0;
+        }
+        &__btn {
+            margin-right: 8px;
+            float: right;
+        }
     }
     &__container2 {
-        width: 50%;
+        width: 60%;
         margin: 0 auto;
         display: none;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        @media screen and (max-width: 744px){
+            width: 80%;
+            min-width: 300px;
+        }
+        &__btn {
+            margin-left: 16px;
+            @media screen and (max-width: 475px){
+                margin-left: 0;
+                margin-top: 16px;
+            }
+        }
     }
     &__container3 {
-        width: 50%;
+        width: 60%;
         margin: 0 auto;
         display: none;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        &__btn {
+        margin-left: 16px;
+        @media screen and (max-width: 475px){
+                margin-left: 0;
+                margin-top: 16px;
+            }
+        }
     }
+}
+#tree {
+    margin-right: 16px;
 }
 
 .content-section__display {
-        width: 90%;
+        width: 100%;
+        height: 100%;
         margin: 0 auto;
         display: none;
+        padding: 0 26px 26px 26px;
+    &__title {
+        grid-column: 1 / 3;
+        @media screen and (max-width: 744px){
+            text-align: center;
+            grid-column: 1;
+        }
+    }
     &__img {
-        width: 50%;
-        max-width: 640px;
-        max-height: 426px;
-        border-radius: 4px;
-        float: left;
+        width: 100%;
+        height: 100%;
+        opacity: 0.9;
+        border-radius: 8px;
+        padding: 4px;
+        background: #2ba84a;
+        border: 1px solid whitesmoke;
+        grid-row: 2;
+        @media screen and (max-width: 744px){
+            grid-column: 1;
+            width: 50%;
+            min-width: 300px;
+            height: auto;
+            margin: 0 auto;
+        }
     }
     &__text-box {
-        float: left;
+        width: 100%;
+        position: relative;
+        border-radius: 4px;
+        grid-row: 2;
+        @media screen and (max-width: 744px){
+            grid-column: 1;
+            grid-row: 3;
+        }
     }
 }
+
+.display__text-box {
+    &__list {
+        list-style-type: circle;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        @media screen and (max-width: 744px){
+            grid-column: 1;
+            grid-row: 3;
+            position: relative;
+            top: none;
+            // margin-top: 16px;
+            list-style-position: inside;
+        }
+        &__item {
+            margin: 20px 0;
+            @media screen and (max-width: 744px){
+                margin: 5px
+            }
+        }
+    }
+    &__link {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        @media screen and (max-width: 744px){
+                display: none;
+            }
+        &:visited {
+            color: whitesmoke;
+            
+        }
+    }
+}
+
+.reset-btn {
+    position: absolute;
+    bottom: -20%;
+    right: 20px;
+    display: none;
+}
+
+// Used to toggle css grid on and off __display element so that it can be hidden when not in use.
+.display--grid {
+            display: grid;
+            grid-template-rows: 1fr 6fr;
+            grid-template-columns: 1fr 1fr;
+            grid-column-gap: 50px;
+            @media screen and (max-width: 744px) {
+                grid-template-columns: 1fr;
+            }
+        }
+
+// content-section__display__text-box__list
 
 .background {
     height: 300vh;
